--- a/index.ipynb
+++ b/index.ipynb
@@ -197,7 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "total_reviews = sum\n",
+    "total_reviews = sum(lambda restaurant)\n",
     "total_reviews # 3420"
    ]
   },
