Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -209,7 +209,7 @@
     }
    ],
    "source": [
-    "total_reviews = sum(lambda restaurant: restaurant['review_count'], restau)\n",
+    "total_reviews = sum(lambda restaurant: restaurant['review_count'], restaurants)\n",
     "total_reviews # 3420"
    ]
   },
