--- a/index.ipynb
+++ b/index.ipynb
@@ -267,7 +267,7 @@
    "outputs": [],
    "source": [
     "def map_format_restaurants(restaurants):\n",
-    "    map(len(restaurant['review_counts'])"
+    "    map(len(restaurant['review_counts'], restaurants))"
    ]
   },
   {
