--- a/index.ipynb
+++ b/index.ipynb
@@ -267,7 +267,8 @@
    "outputs": [],
    "source": [
     "def map_format_restaurants(restaurants):\n",
-    "    map(len(restaurant['review_counts'], restaurants))"
+    "    map(len(restaurant['review_counts'], restaurants))\n",
+    "    "
    ]
   },
   {
