Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -262,13 +262,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def map_format_restaurants(restaurants):\n",
     "    map(len(restaurant['review_counts'], restaurants))\n",
-    "    return restaurant"
+    "    return restaurants"
    ]
   },
   {
