--- a/index.ipynb
+++ b/index.ipynb
@@ -250,7 +250,7 @@
     }
    ],
    "source": [
-    "format_restaurant(restaurants[0]) # {'is_closed': False, 'name': 'Fork & Fig', 'price': 2, 'review_count': 610}"
+    "format_restaurant(restaurants) # {'is_closed': False, 'name': 'Fork & Fig', 'price': 2, 'review_count': 610}"
    ]
   },
   {
@@ -267,8 +267,7 @@
    "outputs": [],
    "source": [
     "def map_format_restaurants(restaurants):\n",
-    "    map(len(restaurant['review_counts'], restaurants))\n",
-    "    return restaurants"
+    "    "
    ]
   },
   {
