--- a/index.ipynb
+++ b/index.ipynb
@@ -262,12 +262,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "def map_format_restaurants(restaurants):\n",
-    "    return list(map(format_restaurant, restaurant))\n",
+    "    return list(map(format_restaurant, restaurants))\n",
     "    "
    ]
   },
