--- a/index.ipynb
+++ b/index.ipynb
@@ -362,7 +362,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return list(filter(lambda restaurant: retaurant['is_closed']), res)"
+    "    return list(filter(lambda restaurant: retaurant['is_closed']), restaurants)"
    ]
   },
   {
